# Home_Work_WEB_13_Part_2

./: pyproject.toml
website_project/: .env.example
website_project/quotes/: views.py
website_project/users/: forms.py  urls.py  views.py
website_project/users/templates/users/: login.html  password_reset_email.html  register.html
website_project/website_project/: settings.py
