[tool.poetry]
name = "module-13-home-work-web-part-2"
version = "0.1.0"
description = ""
authors = ["AndriKovalchuk <andrii.kovalchuk90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "3.12.0"
psycopg2 = "^2.9.9"
mongoengine = "^0.28.2"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
django-environ = "^0.11.2"
pillow = "^10.3.0"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
